fix: encode secure preferences with java.util.Base64
SecurePreferences encrypted with sun.misc.BASE64Encoder but decrypted with
java.util.Base64. The two are not symmetric: BASE64Encoder wraps its output
every 76 characters and the basic Base64 decoder rejects those line breaks, so
any value whose ciphertext encoded to more than 76 characters could be stored
but never read back. In practice that is any password longer than about forty
characters.

sun.misc.BASE64Encoder is also a JDK internal class that was removed in Java 9,
so it would have blocked any future move off Java 8.